--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@
                     href="https://www.frontendmentor.io?ref=challenge"
                     target="_blank"
                     >Frontend Mentor</a
-                >. Coded by <a href="https://www.frontendmentor.io/profile/Albrt78" target="_blank">Albrt78</a>.
+                >. Coded by
+                <a
+                    href="https://www.frontendmentor.io/profile/Albrt78"
+                    target="_blank"
+                    >Albrt78</a
+                >.
             </section>
         </main>
     </body>
